sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:8: error: not found: value i
    if(getColor(i) == Color.red && getColor(i+1) != Color.RED){
                ^DutchFlagAlgo:8: error: not found: value i
    if(getColor(i) == Color.red && getColor(i+1) != Color.RED){
                                            ^DutchFlagAlgo:9: error: not found: value i
      swap(i,i+1)
           ^DutchFlagAlgo:9: error: not found: value i
      swap(i,i+1)
             ^