sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {

  var whiteRed = getSize() - 1
  var beforeWhite = getSize() - 1
  
  while(!isSorted()){
    if(getColor(i) == Color.red && getColor(i+1) != Color.RED){
      swap(i,i+1)
    }
    
    }
}